--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
     
     </div>
-    <script src="/script.js"></script>
+    <script src="script.js"></script>
     
 </body>
 </html>
